--- a/resources/private/html/naked.html
+++ b/resources/private/html/naked.html
@@ -1,4 +1,7 @@
-<html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  </head>
   <body>
     This is just a dummy HTML file to connect to the REPL.
     Don't close this window until you're done with the REPL.
