--- a/resources/private/html/unit-test.html
+++ b/resources/private/html/unit-test.html
@@ -1,4 +1,7 @@
-<html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  </head>
   <body>
     This is just a dummy HTML file with which to load the unit tests.
     This file could be changed to include HTML for the tests to use
